# cppcourse-brunel

./: READ_ME.txt
src/: CMakeLists.txt  Constants.hpp  Doxyfile.in  Neuron.cpp  Neuron.hpp  Simulation.cpp  Simulation.hpp  main.cpp  pyscript.py  unittest.cpp
